dev/monitoring/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prom-stack-grafana
            port: 
              number: 3000
